Fix visibility of logo and theme icon in light theme for two pages

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -3038,12 +3038,17 @@ body {
   scrollbar-color: var(--color-muted) transparent;
 }
 
-body.dark-theme :where(.img-invert, .dark-logo) {
+body.dark-theme :where(.img-invert, .dark-logo),
+body .light-logo {
   filter: brightness(0) invert(1);
 }
 
+body .light-logo {
+  filter: brightness(0) invert(0);
+}
+
 nav :where(.nav-link, .theme-toggler):hover,
-nav .hs-dropdown:hover > button {
+nav .hs-dropdown:hover>button {
   color: var(--color-primary);
 }
 
@@ -3143,7 +3148,7 @@ body.dark-theme .bg-gradient-theme {
   background: #fff;
 }
 
-.gradient-button:hover > .bg-gradient-theme {
+.gradient-button:hover>.bg-gradient-theme {
   color: #fff;
   background: transparent;
 }
@@ -3495,7 +3500,7 @@ header .ape-navbar .nav-logo {
 }
 
 nav.ape-navbar :where(.nav-link, .theme-toggler):hover,
-nav.ape-navbar .hs-dropdown:hover > button {
+nav.ape-navbar .hs-dropdown:hover>button {
   color: var(--color-ape-primary);
 }
 
@@ -3633,7 +3638,7 @@ body.dark-theme .ape-header-gradient-theme {
 /* App UI/UX Code Styling Start */
 
 .app-ui-ux-code nav :where(.nav-link, .theme-toggler):hover,
-.app-ui-ux-code nav .hs-dropdown:hover > button {
+.app-ui-ux-code nav .hs-dropdown:hover>button {
   color: var(--color-auc-primary);
 }
 
@@ -3758,7 +3763,7 @@ body.dark-theme .ape-header-gradient-theme {
 /* Annotate Styling Start */
 
 .annotate nav :where(.nav-link, .theme-toggler):hover,
-.annotate nav .hs-dropdown:hover > button {
+.annotate nav .hs-dropdown:hover>button {
   color: var(--color-anno-primary);
 }
 
@@ -3881,7 +3886,7 @@ body.dark-theme .anno-card-bg {
 /* Mockup & Screenshot Editor Styling Start */
 
 .mockup-screenshot-editor nav :where(.nav-link, .theme-toggler):hover,
-.mockup-screenshot-editor nav .hs-dropdown:hover > button {
+.mockup-screenshot-editor nav .hs-dropdown:hover>button {
   color: var(--color-mse-primary);
 }
 
@@ -3958,7 +3963,7 @@ body.template-pdf-media-engine {
 }
 
 body.template-pdf-media-engine nav.tpme-navbar :where(.nav-link, .theme-toggler):hover,
-body.template-pdf-media-engine nav .hs-dropdown:hover > button {
+body.template-pdf-media-engine nav .hs-dropdown:hover>button {
   color: var(--color-ape-primary);
 }
 
@@ -4082,7 +4087,7 @@ body.template-pdf-media-engine nav .hs-dropdown:hover > button {
 /* Creative Toolbox Stylings */
 
 .creative-toolbox nav :where(.nav-link, .theme-toggler):hover,
-.creative-toolbox nav .hs-dropdown:hover > button {
+.creative-toolbox nav .hs-dropdown:hover>button {
   color: var(--color-ctb-primary);
 }
 
@@ -4202,7 +4207,7 @@ body.dark-theme .ctb-card-bg {
 /* Bulk Image Background Removal Stylings */
 
 .bulk-image-background-removal nav :where(.nav-link, .theme-toggler):hover,
-.bulk-image-background-removal nav .hs-dropdown:hover > button {
+.bulk-image-background-removal nav .hs-dropdown:hover>button {
   color: var(--color-ibr-primary);
 }
 
